--- a/etl/pyproject.toml
+++ b/etl/pyproject.toml
@@ -13,3 +13,6 @@ python = ">=3.10, <3.12"
 numpy = "^1.26"
 pandas = "^2.1"
 asyncpg = "^0.28"
+elasticsearch = "^8.10"
+dagster = "^1.5"
+dagster-webserver = "^1.5"
