--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,11 +7,11 @@ readme = "README.md"
 packages = [{include = "zenon_backend"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10, <3.12"
 fastapi = "^0.103.2"
 uvicorn = "^0.23.2"
 pydantic = "^2.4.2"
-toolforge = "^6.0.0"
+asyncpg = "^0.28"
 
 
 [build-system]
