--- a/etl/pyproject.toml
+++ b/etl/pyproject.toml
@@ -1,19 +1,6 @@
-[tool.poetry]
-name = "json-to-sql"
-version = "0.1.0"
-description = "Convert JSON to SQL"
-authors = ["Tatsuya Hayashi <tatsuya884.0201@gmail.com>"]
-
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
 
-[tool.poetry.dependencies]
-python = ">=3.10, <3.12"
-numpy = "^1.26"
-pandas = "^2.1"
-asyncpg = "^0.28"
-elasticsearch = "^8.10"
-dagster = "^1.5"
-dagster-webserver = "^1.5"
-colorama = "^0.4.6"
+[tool.dagster]
+module_name = "etl"
